# stellarshot

./: Cargo.toml  README.md  justfile  shell.nix
.github/workflows/: build.yml  rust.yml
i18n/de/: stellarshot.ftl
i18n/en/: cosmic_backups.ftl  stellarshot.ftl
i18n/gsw/: stellarshot.ftl
i18n/ru/: cosmic_backups.ftl
i18n/sv/: stellarshot.ftl
res/: com.github.ahoneybun.Stellarshot.desktop  com.github.ahoneybun.Stellarshot.metainfo.xml  com.github.ahoneybun.Stellarshot.xml
src/: app.rs  backup.rs  main.rs
src/app/: config.rs  icon_cache.rs  key_bind.rs  menu.rs  settings.rs
src/app/views/: content.rs
src/backup/: init.rs  restore.rs  snapshot.rs
