[package]
name = "stellarshot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
rust-embed = "8.3.0"
log = "0.4"
env_logger = "0.11"
open = "5.0.2"
serde = { version = "1.0.202", features = ["serde_derive"] }
tracing = "0.1.40"
paste = "1.0"
rustic_core = "0.2.0"
rustic_backend = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
slotmap = "1.0.7"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["multi-window", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
